// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id={null}
    />
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id={null}
    />
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id="Panel"
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
        id={null}
        rows={null}
      >
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_58"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_59"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_60"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_61"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_62"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_63"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_64"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 jKXqGk"
    height="100%"
    id="Panel"
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 hxFwgy Card__CardGridWrapper-sc-1g3s676-4 dHSMJc"
        id={null}
        rows={null}
      >
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_269"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_270"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_271"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_272"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_273"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_274"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 fBbJgY Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_275"
          media=""
          onClick={null}
          placeholder="{ Card }"
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 fZLmDa Panel__PanelSection-sc-48epke-2 iiaelC"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;
